RESOLVED FIXED143431
REGRESSION (r181778): Crash after scrolling Google search result page
https://bugs.webkit.org/show_bug.cgi?id=143431
Summary REGRESSION (r181778): Crash after scrolling Google search result page
Darin Adler
Reported 2015-04-05 17:52:00 PDT
REGRESSION (r181778): Crash after scrolling Google search result page
Attachments
Patch (1.86 KB, patch)
2015-04-05 17:53 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2015-04-05 17:53:07 PDT
Simon Fraser (smfr)
Comment 2 2015-04-05 17:57:51 PDT
Comment on attachment 250181 [details] Patch This crash suggests that the FrameView that's calling this is not m_frame.view(). Maybe we're dispatching scroll events on frames in the page cache?
Darin Adler
Comment 3 2015-04-05 18:30:49 PDT
That’s a good point. While I won’t tackle that right now, it seems worth investigating.
WebKit Commit Bot
Comment 4 2015-04-05 18:44:26 PDT
Comment on attachment 250181 [details] Patch Clearing flags on attachment: 250181 Committed r182371: <http://trac.webkit.org/changeset/182371>
WebKit Commit Bot
Comment 5 2015-04-05 18:44:31 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2015-04-05 19:41:28 PDT
Note You need to log in before you can comment on or make changes to this bug.